# ROR-KvDB-Lib

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs
src/store/: kv.rs  kv_error.rs
