[package]
name = "rdb"
version = "0.1.0"
edition = "2021"
authors = ["MAKIROR <gzanan@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Library for ROR Key-Value Database."
repository = "https://github.com/MAKIROR/ROR-KvDB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
serde = { version = "1.0.151", default-features = false, features = ["derive"] }
thiserror = "1.0.24"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
